Fixed white space Top/Bottom

--- a/styles.less
+++ b/styles.less
@@ -11,12 +11,26 @@
 * {
     box-sizing: border-box;
     font-family: @font, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+html {
+    height: 100%;
+    overflow: hidden;
+}
+body {
+    height: 100%;
+    overflow: auto;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
     scroll-snap-type: y mandatory;
 }
 
@@ -44,7 +58,6 @@ header {
     padding: 0 40px;
     width: 100%;
     min-height: 120px;
-    font-size: 1rem;
     // background-color: $coltwo;
     background-image: linear-gradient(
         180deg,
